# trackflow

./: .gitignore  README.md  build.sh  index.html  package-lock.json  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: deploy.yml  deploy_lambda.yml  deploy_webapp.yml
api/: deploy.sh  dockerfile  pyproject.toml  readme.md  requirements.txt  test.ipynb
api/src/: activities.py  apn.py  auth_manager.py  email_manager.py  llm.py  main.py  mid_week_update.py  middleware.py  mileage_recommendation.py  new_training_week.py  prompts.py  supabase_client.py  supabase_helpers.py  training_plan.py  training_week.py  update_pipeline.py  utils.py  webhook.py
api/src/types/: activity.py  feedback.py  mileage_recommendation.py  training_plan.py  training_week.py  update_pipeline.py  user.py  webhook.py
api/tests/: test_get_training_week.py  test_main.py  test_update_pipeline.py
infra/app/: main.tf  variable.tf
infra/app/ecs/: main.tf  variable.tf
infra/app/eventbridge/: main.tf  variables.tf
lambda/: pyproject.toml  test.ipynb
lambda/src/: activities.py  auth_manager.py  constants.py  email_manager.py  frontend_router.py  lambda_function.py  llm.py  mid_week_update.py  supabase_client.py  update_pipeline.py
lambda/tests/: test_update_pipeline.py
mobile/mobile/: APIManager.swift  AppDelegate.swift  AppState.swift  AuthManager.swift  ColorTheme.swift  ContentView.swift  DashboardNavbar.swift  DashboardSkeletonView.swift  DashboardView.swift  GeneratingPlanView.swift  Info.plist  LandingPageView.swift  LoadingView.swift  Models.swift  NotificationManager.swift  OnboardingCarousel.swift  OnboardingView.swift  PreferencesView.swift  ProfileSkeletonView.swift  ProfileView.swift  RaceDetailsWidgetSkeleton.swift  RaceSetupSheet.swift  StravaAuthManager.swift  StravaConnectOverlay.swift  TrainingPlanChartSkeleton.swift  TrainingPlanSkeleton.swift  TrainingPlanView.swift  TrainingWeek.swift  WaitingForGenerationView.swift  mobileApp.swift
mobile/mobile.xcodeproj/: project.pbxproj
scripts/: build.sh  code2clipboard.py  delete_test_user.py  deploy.sh
src/: activities.py  apn.py  auth.ipynb  auth_init.py  auth_manager.py  auth_table_init.py  constants.py  daily_pipeline.py  email_manager.py  frontend_router.py  get_auth.py  initial_auth.ipynb  lambda_function.py  llm.py  mid_week_update.py  new_training_week.py  supabase_client.py  supabase_models.py  test.ipynb  test_get_user.ipynb  training_week.py  training_week_update.py  update_pipeline.py  utils.py  webhook_router.py
src/supabase/: client.py  models.py
src/training_week_generation/: lambda_function.py  training_week.py
src/types/: activity.py  activity_summary.py  day_of_week_summary.py  mid_week_analysis.py  session_type.py  training_week.py  training_week_skeleton.py  training_week_with_coaching.py  update_pipeline.py  user_auth_row.py  user_row.py  week_summary.py  weekly_mileage_target_response.py
tests/: common.py  test_e2e.py  test_email.py  test_full_week.py  test_new_training_week.py  test_update_pipeline.py
trackflow/api/: pyproject.toml  requirements.txt
trackflow/web/: package.json
web/: next.config.mjs  package-lock.json  package.json
webapp/: package-lock.json  package.json  tsconfig.json
(+55 files in other folders)
