[tool.poetry]
name = "strava"
version = "0.1.0"
description = ""
authors = ["voynow <voynow99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stravalib = "^v1.7"
supabase = "*"
python-dotenv = "^1.0.1"
polars = "^0.20.31"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
