[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "strava"
version = "0.1.0"
description = ""
authors = ["voynow <voynow99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stravalib = "^v1.7"
supabase = "*"
python-dotenv = "^1.0.1"
polars = "^0.20.31"
urllib3 = "2.2.2"
openai = "^1.35.3"
sib-api-v3-sdk = "^7.6.0"
pydantic = "1.10.16"
postgrest = "^0.16.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
freezegun = "^1.5.1"
pytest = "^8.3.2"
